--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
+    <div class="faq-item">
+      <details>
+        <summary>ガイドボーカル作成とは何ですか？</summary>
+        <p>MIDIデータや楽譜から、練習用・参考用のガイドボーカルを制作するサービスです。シンセボイスまたはセルフ歌唱で対応し、録音前の練習やメロディ確認にご活用いただけます。</p>
+      </details>
+    </div><!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>【歌ってみたMIX専門】Ryuzan Mix Salon｜VTuber・歌い手さん向け高品質MIX</title>
   <meta content="録音ミス・音痴・初心者も大歓迎！"やさしい歌声トリートメント"で、安心して依頼できるMIX＆エンコード専門サロンです。明確な料金体系、24時間以内の返信対応。" name="description"/>
-  <meta content="歌ってみた,MIX,VTuber,ボカロ,ボーカルミックス,エンコード,ハモリ作成,YouTube,音声編集,依頼,女性向け,初めてのMIX,高品質,プロ仕様,歌唱指導,ピッチ補正,マスタリング" name="keywords">
+  <meta content="歌ってみた,MIX,VTuber,ボカロ,ボーカルミックス,エンコード,ハモリ作成,YouTube,音声編集,依頼,女性向け,初めてのMIX,高品質,プロ仕様,ピッチ補正,マスタリング" name="keywords">
   
   <!-- ファビコン -->
   <link href="favicon256.png" rel="icon" sizes="32x32" type="image/png"/>
@@ -57,7 +62,7 @@
       "name": "歌ってみたMIXサービス",
       "price": "5000",
       "priceCurrency": "JPY",
-      "description": "フルコーラスMIX・マスタリング込み"
+      "description": "フルコーラスMIX・マスタリング・ハモリ2トラック込み"
     }
   }
   </script>
@@ -71,7 +76,7 @@
       <a href="#playlist">実績</a>
       <a href="#about">サロンについて</a>
       <a href="#pricing">料金</a>
-      <a href="request-form.html" class="cta-nav">簡単依頼</a>
+      <a href="request-form.html" class="cta-nav">詳細依頼</a>
       <a href="#faq">よくある質問</a>
       <a href="#contact">お問い合わせ</a>
     </div>
@@ -92,7 +97,7 @@
         <div class="cta-group">
           <a href="request-form.html" class="cta accent">
             <i class="fas fa-magic"></i>
-            簡単依頼フォーム
+            詳細依頼フォーム
           </a>
           <a href="#contact" class="cta">
             <i class="fas fa-envelope"></i>
@@ -182,7 +187,7 @@
           <strong>歌ってみたMIX:</strong> ボカロ・J-POP中心<br>
           <strong>SNSアカウント:</strong> <a href="https://x.com/ryuzanmix" target="_blank">@ryuzanmix</a><br>
           <strong>対応レベル:</strong> 初心者〜上級者・オーディション提出音源まで<br>
-          <strong>特殊対応:</strong> ライブ音源補正、デュエット・コラボ、仮歌制作<br>
+          <strong>特殊対応:</strong> ライブ音源補正、デュエット・コラボ、ガイドボーカル制作<br>
           <strong>納期実績:</strong> 平均2週間、最短1週間対応可能
         </p>
       </div>
@@ -192,7 +197,7 @@
   <!-- 選ばれる理由 -->
   <section id="reasons">
     <div class="section-header">
-      <h2 class="section-title">選ばれる 6 つの理由</h2>
+      <h2 class="section-title">選ばれる 5 つの理由</h2>
       <p class="section-subtitle">初心者から上級者まで、安心してご依頼いただける理由があります</p>
     </div>
 
@@ -235,14 +240,6 @@
           プロ仕様の高品質MIX
         </h3>
         <p>有料プラグイン多数使用でスタジオクオリティを実現。ピッチ補正からマスタリングまで、お手頃価格で艶やかに仕上げます。</p>
-      </article>
-
-      <article class="card">
-        <h3>
-          <i class="fas fa-graduation-cap" style="color: #e74c3c;"></i>
-          歌唱指導も対応
-        </h3>
-        <p>MIXだけでなく歌唱アドバイスも提供。録音前の練習段階からサポートし、より良い歌声作りをお手伝いします。</p>
       </article>
     </div>
   </section>
@@ -295,30 +292,23 @@
           <div class="price-grid">
             <div class="price-item featured">
               <div class="price-name">⭐ フルコーラス MIX</div>
-              <div class="price-description">ノイズ処理／ピッチ&リズム補正／マスタリングまでワンストップ対応</div>
+              <div class="price-description">ノイズ処理／ピッチ&リズム補正／マスタリング／ハモリ2トラックまで込み</div>
               <div class="price-amount">¥5,000</div>
               <div class="price-note">初心者の方におすすめ◎</div>
             </div>
 
             <div class="price-item">
               <div class="price-name">ワンコーラス MIX</div>
-              <div class="price-description">1番のみをMIX（お試し用）</div>
+              <div class="price-description">1番のみをMIX（ハモリ2トラックまで込み・お試し用）</div>
               <div class="price-amount">¥3,000</div>
               <div class="price-note">まずは気軽にクオリティ確認</div>
             </div>
 
             <div class="price-item">
-              <div class="price-name">🎤 仮歌作成（単体）</div>
+              <div class="price-name">🎤 ガイドボーカル作成（単体）</div>
               <div class="price-description">MIDIからガイドボーカルを制作（シンセ or セルフ歌唱）</div>
               <div class="price-amount">¥5,000</div>
               <div class="price-note">デモ・練習用に便利</div>
-            </div>
-
-            <div class="price-item">
-              <div class="price-name">🎓 歌唱アドバイス</div>
-              <div class="price-description">録音前の歌唱データを分析し、より良い歌い方をアドバイス</div>
-              <div class="price-amount">¥2,000</div>
-              <div class="price-note">1週間以内に詳細レポート提供</div>
             </div>
           </div>
         </div>
@@ -328,10 +318,10 @@
           <h4 class="price-section-title">🎚️ 追加オプション</h4>
           <div class="price-grid">
             <div class="price-item">
-              <div class="price-name">ハモリ追加・生成（1トラック）</div>
-              <div class="price-description">ボーカルに厚みを加えるハモリを自動生成または追加</div>
+              <div class="price-name">ハモリ追加（3トラック目から）</div>
+              <div class="price-description">3トラック目からの追加ハモリ（1トラックごと）</div>
               <div class="price-amount">+¥1,000</div>
-              <div class="price-note">原曲キー・メロディ準拠</div>
+              <div class="price-note">2トラックまでは基本料金に含む</div>
             </div>
 
             <div class="price-item">
@@ -349,7 +339,7 @@
             </div>
 
             <div class="price-item">
-              <div class="price-name">🎤 仮歌作成（MIX同時依頼）</div>
+              <div class="price-name">🎤 ガイドボーカル作成（MIX同時依頼）</div>
               <div class="price-description">フル or ワンコーラスMIXと同時ご依頼でガイドボーカル制作</div>
               <div class="price-amount">+¥3,000</div>
               <div class="price-note">セット割でお得</div>
@@ -405,24 +395,24 @@
           <strong>コラボ対応:</strong> フルコーラス MIX (¥5,000) + コラボ追加 (+¥2,000) + エンコード (+¥1,000) = <span style="color: var(--primary); font-weight: bold;">¥8,000</span>
         </div>
         <div style="padding: 15px; background: var(--bg-secondary); border-radius: 8px;">
-          <strong>歌唱向上プラン:</strong> 歌唱アドバイス (¥2,000) → 改善後 → フルコーラス MIX (¥5,000) = <span style="color: var(--primary); font-weight: bold;">¥7,000</span>
+          <strong>ハモリ多用プラン:</strong> フルコーラス MIX (¥5,000) + ハモリ追加 3-4トラック目 (+¥2,000) = <span style="color: var(--primary); font-weight: bold;">¥7,000</span>
         </div>
       </div>
     </div>
 
-    <!-- 簡単依頼フォーム案内 -->
+    <!-- 詳細依頼フォーム案内 -->
     <div class="card" style="background: linear-gradient(135deg, var(--accent), #ff8fb3); color: white; border: none; margin: 30px 0;">
       <h3 style="color: white; margin-bottom: 15px;">
         <i class="fas fa-magic"></i>
-        もっと簡単に依頼したい方へ
+        プロ仕様の詳細設定で依頼したい方へ
       </h3>
       <p style="color: white; margin-bottom: 20px;">
-        「何を選べばいいかわからない…」そんな方には、簡単依頼フォームがおすすめ！<br>
-        必要最小限の項目を選ぶだけで、DM用の文章を自動生成します。
+        「細かい設定まで指定したい」「理想の仕上がりを伝えたい」そんな方には、詳細依頼フォームがおすすめ！<br>
+        プロ仕様の詳細設定で、DM用の文章を自動生成します。
       </p>
       <a href="request-form.html" style="display: inline-flex; align-items: center; gap: 8px; background: white; color: var(--accent); padding: 12px 24px; border-radius: 30px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">
         <i class="fas fa-arrow-right"></i>
-        簡単依頼フォームを使う
+        詳細依頼フォームを使う
       </a>
     </div>
   </section>
@@ -441,7 +431,7 @@
           <h3>お問い合わせ・ご相談</h3>
           <p>
             下記のいずれかの方法でお気軽にご連絡ください。<br>
-            • <strong><a href="request-form.html" style="color: var(--primary);">簡単依頼フォーム</a></strong> - 選ぶだけで文章自動生成<br>
+            • <strong><a href="request-form.html" style="color: var(--primary);">詳細依頼フォーム</a></strong> - 詳細設定で文章自動生成<br>
             • <a href="https://x.com/ryuzanmix" target="_blank" rel="noopener" style="color: var(--primary);">X（Twitter）のDM</a> - 最もお得で迅速<br>
             • <a href="mailto:ryuzan.mix@gmail.com?subject=MIX依頼のご相談&body=こんにちは、竜山つむぎさんへMIXの件でご連絡です。" style="color: var(--primary);">メール</a> - 詳細な相談に最適<br>
             • <a href="https://coconala.com/services/2323053" target="_blank" rel="noopener" style="color: var(--primary);">ココナラ</a>・<a href="https://skima.jp/item/detail?item_id=239311" target="_blank" rel="noopener" style="color: var(--primary);">SKIMA</a> - 決済も含めて安心<br>
@@ -552,8 +542,8 @@
 
     <div class="faq-item">
       <details>
-        <summary>歌唱アドバイスではどんなことを教えてもらえる？</summary>
-        <p>ピッチの安定性、リズムの取り方、ブレス位置、表現力向上のポイントなど、あなたの歌声を分析して具体的なアドバイスを提供します。録音前に改善することで、MIX後の仕上がりが格段に向上します。</p>
+        <summary>ハモリは何トラックまで？</summary>
+        <p>基本料金には2トラックまでのハモリが含まれています。3トラック目からは1トラックごとに+¥1,000で追加できます。ご希望に応じて何トラックでも対応可能です。</p>
       </details>
     </div>
 
@@ -595,7 +585,7 @@
       <div class="contact-buttons">
         <a href="request-form.html" class="contact-button accent">
           <i class="fas fa-magic"></i>
-          簡単依頼フォーム
+          詳細依頼フォーム
         </a>
 
         <a href="https://x.com/ryuzanmix" class="contact-button primary" target="_blank" rel="noopener">
@@ -810,21 +800,21 @@
         "name": "フルコーラスMIX",
         "price": "5000",
         "priceCurrency": "JPY",
-        "description": "ノイズ処理、ピッチ補正、マスタリング込み"
+        "description": "ノイズ処理、ピッチ補正、マスタリング、ハモリ2トラック込み"
       },
       {
         "@type": "Offer",
         "name": "ワンコーラスMIX",
         "price": "3000",
         "priceCurrency": "JPY",
-        "description": "お試し用1番のみMIX"
+        "description": "お試し用1番のみMIX、ハモリ2トラック込み"
       },
       {
         "@type": "Offer",
-        "name": "歌唱アドバイス",
-        "price": "2000",
+        "name": "ガイドボーカル作成",
+        "price": "5000",
         "priceCurrency": "JPY",
-        "description": "録音前の歌唱指導・アドバイス"
+        "description": "MIDIからガイドボーカル制作"
       }
     ],
     "areaServed": "JP",
