--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       <a href="#playlist">実績</a>
       <a href="#about">サロンについて</a>
       <a href="#pricing">料金</a>
+      <a href="recording-guide.html">録音ガイド</a>
       <a href="request-form.html" class="cta-nav">詳細依頼</a>
       <a href="#faq">よくある質問</a>
       <a href="#contact">お問い合わせ</a>
@@ -94,6 +95,10 @@
           <a href="request-form.html" class="cta accent">
             <i class="fas fa-magic"></i>
             詳細依頼フォーム
+          </a>
+          <a href="recording-guide.html" class="cta">
+            <i class="fas fa-book-open"></i>
+            📱 録音方法ガイド
           </a>
           <a href="#contact" class="cta">
             <i class="fas fa-envelope"></i>
@@ -467,7 +472,7 @@
     </div>
 
     <!-- 詳細依頼フォーム案内 -->
-    <div class="card" style="background: linear-gradient(135deg, var(--accent), #ff8fb3); color: white; border: none; margin: 30px 0;">
+    <div class="card" style="background: var(--gradient-accent); color: white; border: none; margin: 30px 0;">
       <h3 style="color: white; margin-bottom: 15px;">
         <i class="fas fa-magic"></i>
         プロ仕様の詳細設定で依頼したい方へ
@@ -500,7 +505,8 @@
             • <strong><a href="request-form.html" style="color: var(--primary);">詳細依頼フォーム</a></strong> - 詳細設定で文章自動生成<br>
             • <a href="https://x.com/ryuzanmix" target="_blank" rel="noopener" style="color: var(--primary);">X（Twitter）のDM</a> - 最もお得で迅速<br>
             • <a href="mailto:ryuzan.mix@gmail.com?subject=MIX依頼のご相談&body=こんにちは、竜山つむぎさんへMIXの件でご連絡です。" style="color: var(--primary);">メール</a> - 詳細な相談に最適<br>
-            録音音源は<a href="https://gigafile.nu/" target="_blank" rel="noopener" style="color: var(--primary);">ギガファイル便</a>やGoogle Driveでお送りください。MIX方針やご要望も詳しくお聞かせください。
+            録音音源は<a href="https://gigafile.nu/" target="_blank" rel="noopener" style="color: var(--primary);">ギガファイル便</a>やGoogle Driveでお送りください。MIX方針やご要望も詳しくお聞かせください。<br>
+            <strong><a href="recording-guide.html" style="color: var(--accent);">📱 録音方法がわからない方はこちらのガイドをご覧ください</a></strong>
           </p>
         </div>
       </div>
@@ -619,19 +625,19 @@
     </div>
 
     <!-- 重要ポイント -->
-    <div class="card" style="background: linear-gradient(135deg, var(--primary-light), #fff); border: 2px solid var(--primary); margin-top: 40px;">
+    <div class="card" style="background: var(--gradient); border: 2px solid var(--primary); margin-top: 40px;">
       <h3 style="color: var(--primary-dark); margin-bottom: 15px;">
         <i class="fas fa-exclamation-triangle"></i>
         重要なポイント
       </h3>
       <div style="display: grid; gap: 15px;">
-        <div style="padding: 12px; background: #fff3cd; border-radius: 8px; border-left: 4px solid var(--warning);">
+        <div style="padding: 12px; background: rgba(255, 255, 255, 0.9); border-radius: 8px; border-left: 4px solid var(--warning);">
           <strong style="color: var(--warning);">作業期間：</strong>ご承諾日から1か月間をいただきます
         </div>
-        <div style="padding: 12px; background: #d1ecf1; border-radius: 8px; border-left: 4px solid #17a2b8;">
+        <div style="padding: 12px; background: rgba(255, 255, 255, 0.9); border-radius: 8px; border-left: 4px solid #17a2b8;">
           <strong style="color: #17a2b8;">入金タイミング：</strong>仮MIX確認・修正完了後にご入金
         </div>
-        <div style="padding: 12px; background: #f8d7da; border-radius: 8px; border-left: 4px solid #dc3545;">
+        <div style="padding: 12px; background: rgba(255, 255, 255, 0.9); border-radius: 8px; border-left: 4px solid #dc3545;">
           <strong style="color: #dc3545;">修正について：</strong>一度にすべて詳細にご指示ください（無料2回まで）
         </div>
       </div>
@@ -647,8 +653,18 @@
 
     <div class="faq-item">
       <details>
+        <summary>録音方法がわからない・音源の送り方は？</summary>
+        <p>録音から音源提出まで、デバイス別に詳しく解説した<strong><a href="recording-guide.html" style="color: var(--primary);">📱 録音・音源提出ガイド</a></strong>をご用意しています。<br>
+        iPhone・Android・PCそれぞれの推奨アプリ、録音手順、ファイル命名規則、アップロード方法まで初心者でも分かりやすく説明しています。<br>
+        <span style="color: var(--success); font-weight: 600;">※このガイドを見れば誰でも簡単に録音・提出できます！</span></p>
+      </details>
+    </div>
+
+    <div class="faq-item">
+      <details>
         <summary>スマホ録音でも大丈夫？</summary>
-        <p>大歓迎です😊 最新のスマートフォンは録音品質が向上しており、適切なノイズ除去処理で十分な品質に仕上げることができます。まずは気軽にご相談ください！</p>
+        <p>大歓迎です😊 最新のスマートフォンは録音品質が向上しており、適切なノイズ除去処理で十分な品質に仕上げることができます。まずは気軽にご相談ください！<br>
+        詳しい録音方法は<a href="recording-guide.html" style="color: var(--primary);">録音ガイド</a>をご覧ください。</p>
       </details>
     </div>
 
@@ -717,7 +733,7 @@
 
   <!-- メッセージ -->
   <section id="message">
-    <div style="text-align: center; background: var(--bg-secondary); padding: 60px 30px; border-radius: 30px; margin: 40px 0;">
+    <div style="text-align: center; background: var(--primary-pale); padding: 60px 30px; border-radius: 30px; margin: 40px 0; border: 1px solid var(--border);">
       <h2 style="color: var(--primary-dark); margin-bottom: 20px;">🧡 最後にひとこと</h2>
       <p style="font-size: 1.1rem; line-height: 1.8; max-width: 600px; margin: 0 auto;">
         「MIXを頼むのが初めてで不安…」<br>
@@ -742,6 +758,11 @@
         <a href="request-form.html" class="contact-button accent">
           <i class="fas fa-magic"></i>
           詳細依頼フォーム
+        </a>
+
+        <a href="recording-guide.html" class="contact-button">
+          <i class="fas fa-book-open"></i>
+          📱 録音方法ガイド
         </a>
 
         <a href="https://x.com/ryuzanmix" class="contact-button primary" target="_blank" rel="noopener">
