--- a/index.html
+++ b/index.html
@@ -113,21 +113,19 @@
       <div class="hero-illust">
         <div class="playlist-section" id="playlist">
           <h2 class="section-title">歌ってみたMIXの実績・サンプル音源集</h2>
-          <p class="playlist-subtitle">仕上がりをYouTubeで公開中！</p>
+          <p class="playlist-subtitle">準備中</p>
           
-          <a href="https://www.youtube.com/playlist?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9" 
+          <a href="https://x.com/ryuzanmix/status/1940267868761071883" 
              class="playlist-button" target="_blank" rel="noopener">
-            🎧 YouTube - MIXサンプルプレイリスト
+            🎧 サンプルはXの固定ツイートをご覧ください
           </a>
 
-          <div class="playlist-wrapper">
-            <iframe 
-              src="https://www.youtube.com/embed/videoseries?list=PL2_Tymt_5rAqeauBL94ZcWzlmo4m7FrV9&rel=0" 
-              title="YouTube video playlist" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen 
-              loading="lazy">
-            </iframe>
+          <div class="playlist-wrapper" style="background: #f8f9fa; border: 2px dashed #dee2e6; border-radius: 12px; padding: 40px; text-align: center;">
+            <div style="color: #6c757d; font-size: 1.1rem;">
+              <i class="fas fa-tools" style="font-size: 2rem; margin-bottom: 15px; display: block;"></i>
+              <p style="margin: 0;">YouTubeプレイリストは準備中です</p>
+              <p style="margin: 10px 0 0 0; font-size: 0.9rem;">現在、サンプル音源をXの固定ツイートでご確認いただけます</p>
+            </div>
           </div>
 
           <div class="playlist-description">
@@ -151,8 +149,8 @@
         <div class="stat-label" style="color: var(--warning); font-weight: 600;">現在の納期<br><small style="font-size: 0.8rem;">※依頼数増加のため</small></div>
       </div>
       <div class="stat-item">
-        <span class="stat-number">100%</span>
-        <div class="stat-label">満足度評価</div>
+        <span class="stat-number">プロ仕様</span>
+        <div class="stat-label">高品質機材使用</div>
       </div>
     </div>
   </section>
