--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
           <a href="#pricing" class="cta-secondary">
             ▶︎ 詳しい料金・進行の流れはこちら
           </a>
+          <div style="margin-top: 20px; padding: 15px; background: #fff3cd; border: 2px solid var(--warning); border-radius: 12px; text-align: center;">
+            <p style="margin: 0; color: var(--warning); font-weight: 600; font-size: 0.9rem;">
+              <i class="fas fa-exclamation-triangle"></i>
+              <strong>ご依頼の際は、<a href="recording-guide.html" style="color: var(--warning); text-decoration: underline;">録音ガイド</a>を必ずご確認の上ご依頼ください。</strong>
+            </p>
+          </div>
         </div>
       </div>
 
@@ -654,7 +660,25 @@
         <summary>録音方法がわからない・音源の送り方は？</summary>
         <p>録音から音源提出まで、デバイス別に詳しく解説した<strong><a href="recording-guide.html" style="color: var(--primary);">📱 録音・音源提出ガイド</a></strong>をご用意しています。<br>
         iPhone・Android・PCそれぞれの推奨アプリ、録音手順、ファイル命名規則、アップロード方法まで初心者でも分かりやすく説明しています。<br>
-        <span style="color: var(--success); font-weight: 600;">※このガイドを見れば誰でも簡単に録音・提出できます！</span></p>
+        <span style="color: var(--success); font-weight: 600;">※このガイドを見れば誰でも簡単に録音・提出できます！</span><br>
+        <span style="color: var(--warning); font-weight: 600; margin-top: 10px; display: block;">
+          <i class="fas fa-exclamation-triangle"></i>
+          <strong>ご依頼の際は、録音ガイドを必ずご確認の上ご依頼ください。</strong>
+        </span></p>
+      </details>
+    </div>
+
+    <div class="faq-item">
+      <details>
+        <summary>なぜ録音ガイドの確認が必要なの？</summary>
+        <p>録音品質がMIXの最終仕上がりを大きく左右するためです。<br>
+        <strong>良い録音 × 良いMIX = 素晴らしい仕上がり</strong><br>
+        <strong>悪い録音 × 良いMIX = 限界のある仕上がり</strong><br><br>
+        MIXは「録音された素材を最大限に活かす技術」であり、元の録音品質を超えた結果を生み出すことはできません。<br>
+        <strong><a href="recording-guide.html" style="color: var(--primary);">📱 録音ガイド</a></strong>の録音方法を実践していただければ、MIXで十分に美しく仕上げることができます！<br>
+        <span style="color: var(--accent); font-weight: 600; margin-top: 10px; display: block;">
+          💡 適切な録音方法を知ることで、理想の仕上がりに近づけます
+        </span></p>
       </details>
     </div>
 
@@ -747,10 +771,21 @@
     <div class="contact">
       <h2 class="section-title">ご相談はこちらから☺️</h2>
       <p style="margin-bottom: 10px;">「ちょっと聞いてみたいな…」という方も、お気軽にご連絡ください🕊</p>
-      <p style="font-size: 0.9rem; color: var(--text-light); margin-bottom: 30px;">
+      <p style="font-size: 0.9rem; color: var(--text-light); margin-bottom: 20px;">
         「録音に不安がある…」「まだ依頼じゃないけど話を聞いてみたい」なども大歓迎です🌸<br>
         無理な勧誘などは一切ありませんので、安心してどうぞ。
       </p>
+      
+      <div style="margin-bottom: 30px; padding: 20px; background: #fff3cd; border: 2px solid var(--warning); border-radius: 16px;">
+        <h4 style="color: var(--warning); margin-bottom: 15px; text-align: center;">
+          <i class="fas fa-exclamation-triangle"></i>
+          ご依頼前の重要なお知らせ
+        </h4>
+        <p style="margin: 0; color: var(--warning); font-weight: 600; text-align: center;">
+          <strong>ご依頼の際は、<a href="recording-guide.html" style="color: var(--warning); text-decoration: underline;">📱 録音方法ガイド</a>を必ずご確認の上ご依頼ください。</strong><br>
+          <small style="font-weight: 400; margin-top: 8px; display: block;">録音方法により、MIXの仕上がりが大きく左右されます</small>
+        </p>
+      </div>
 
       <div class="contact-buttons">
         <a href="request-form.html" class="contact-button accent">
