--- a/request-form.html
+++ b/request-form.html
@@ -472,6 +472,20 @@
         <p>プロ仕様の詳細設定で、理想通りのMIXを実現します</p>
       </div>
 
+      <div style="background: #fff3cd; border: 2px solid var(--warning); border-radius: 20px; padding: 30px; margin-bottom: 30px; text-align: center;">
+        <h3 style="color: var(--warning); margin-bottom: 20px;">
+          <i class="fas fa-exclamation-triangle"></i>
+          フォーム入力前の重要なお知らせ
+        </h3>
+        <p style="color: var(--warning); font-weight: 600; margin-bottom: 15px;">
+          <strong>ご依頼の際は、<a href="recording-guide.html" style="color: var(--warning); text-decoration: underline;">📱 録音方法ガイド</a>を必ずご確認の上ご依頼ください。</strong>
+        </p>
+        <p style="color: var(--warning); font-size: 0.9rem; margin: 0;">
+          録音方法により、MIXの仕上がりが大きく左右されます。<br>
+          適切な録音方法を事前にご確認いただくことで、より理想的な仕上がりを実現できます。
+        </p>
+      </div>
+
       <form id="requestForm">
         <!-- 依頼者情報 -->
         <div class="form-card">
@@ -605,6 +619,17 @@
         <div class="form-card">
           <div class="form-section">
             <h3>🎤 録音音源情報 <span class="section-indicator">重要</span></h3>
+            
+            <div style="background: #fff3cd; border: 2px solid var(--warning); border-radius: 12px; padding: 20px; margin-bottom: 25px;">
+              <div style="color: var(--warning); font-weight: 600; margin-bottom: 10px; display: flex; align-items: center; gap: 8px;">
+                <i class="fas fa-exclamation-triangle"></i>
+                録音前の方は必ずご確認ください
+              </div>
+              <p style="margin: 0; color: var(--warning); font-size: 0.9rem;">
+                <strong>ご依頼の際は、<a href="recording-guide.html" style="color: var(--warning); text-decoration: underline;">📱 録音方法ガイド</a>を必ずご確認の上ご依頼ください。</strong><br>
+                適切な録音方法により、MIXの仕上がりが大きく向上します。
+              </p>
+            </div>
             
             <div class="form-group">
               <label>録音状況 <span class="required">※必須</span></label>
