--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
           <span style="background: var(--warning); color: white; padding: 4px 12px; border-radius: 20px; font-size: 0.9rem; font-weight: 600; margin-top: 8px; display: inline-block;">⚠️ 現在の納期：1か月前後（依頼数増加のため）</span>
         </p>
         <div class="cta-group">
-          <a href="request-form.html" class="cta accent">
-            <i class="fas fa-magic"></i>
-            詳細依頼フォーム
+          <a href="#contact" class="cta accent">
+            <i class="fas fa-envelope"></i>
+            ご相談・ご依頼はこちら
           </a>
           <a href="recording-guide.html" class="cta">
             <i class="fas fa-book-open"></i>
             📱 録音方法ガイド
           </a>
-          <a href="#contact" class="cta">
-            <i class="fas fa-envelope"></i>
-            ご相談・ご依頼はこちら
+          <a href="request-form.html" class="cta">
+            <i class="fas fa-magic"></i>
+            詳細依頼フォーム
           </a>
           <a href="#pricing" class="cta-secondary">
             ▶︎ 詳しい料金・進行の流れはこちら
@@ -315,11 +315,11 @@
               <div class="price-note">まずは気軽にクオリティ確認</div>
             </div>
 
-            <div class="price-item">
-              <div class="price-name">🎤 ガイドボーカル作成（単体）</div>
-              <div class="price-description">MIDIからガイドボーカルを制作（シンセ or セルフ歌唱）</div>
-              <div class="price-amount">¥5,000</div>
-              <div class="price-note">デモ・練習用に便利</div>
+            <div class="price-item" style="opacity: 0.5; background: #f5f5f5;">
+              <div class="price-name" style="color: var(--text-muted);">🎤 ガイドボーカル作成（単体）</div>
+              <div class="price-description" style="color: var(--text-muted);">MIDIからガイドボーカルを制作（シンセ or セルフ歌唱）</div>
+              <div class="price-amount" style="color: var(--text-muted);">準備中</div>
+              <div class="price-note" style="color: var(--text-muted);">近日提供予定</div>
             </div>
           </div>
         </div>
@@ -350,17 +350,24 @@
             </div>
 
             <div class="price-item">
-              <div class="price-name">🎤 ガイドボーカル作成（MIX同時依頼）</div>
-              <div class="price-description">フル or ワンコーラスMIXと同時ご依頼でガイドボーカル制作</div>
-              <div class="price-amount">+¥3,000</div>
-              <div class="price-note">セット割でお得</div>
+              <div class="price-name">🎛️ FX処理（1か所）</div>
+              <div class="price-description">ボコーダー、ディストーション、特殊エフェクト等の処理</div>
+              <div class="price-amount">+¥2,000</div>
+              <div class="price-note">1か所につき、複数箇所対応可</div>
             </div>
 
-            <div class="price-item">
-              <div class="price-name">📑 ガイド譜 PDF</div>
-              <div class="price-description">視覚的にわかりやすいメロディ譜をPDFで提供</div>
-              <div class="price-amount">+¥500</div>
-              <div class="price-note">楽譜が苦手でも安心♪</div>
+            <div class="price-item" style="opacity: 0.5; background: #f5f5f5;">
+              <div class="price-name" style="color: var(--text-muted);">🎤 ガイドボーカル作成（MIX同時依頼）</div>
+              <div class="price-description" style="color: var(--text-muted);">フル or ワンコーラスMIXと同時ご依頼でガイドボーカル制作</div>
+              <div class="price-amount" style="color: var(--text-muted);">準備中</div>
+              <div class="price-note" style="color: var(--text-muted);">近日提供予定</div>
+            </div>
+
+            <div class="price-item" style="opacity: 0.5; background: #f5f5f5;">
+              <div class="price-name" style="color: var(--text-muted);">📑 ガイド譜 PDF</div>
+              <div class="price-description" style="color: var(--text-muted);">視覚的にわかりやすいメロディ譜をPDFで提供</div>
+              <div class="price-amount" style="color: var(--text-muted);">準備中</div>
+              <div class="price-note" style="color: var(--text-muted);">近日提供予定</div>
             </div>
           </div>
         </div>
@@ -788,6 +795,11 @@
       </div>
 
       <div class="contact-buttons">
+        <a href="https://x.com/ryuzanmix" class="contact-button primary" target="_blank" rel="noopener">
+          <i class="fab fa-twitter"></i>
+          XのDMで相談する（@ryuzanmix）
+        </a>
+
         <a href="request-form.html" class="contact-button accent">
           <i class="fas fa-magic"></i>
           詳細依頼フォーム
@@ -798,19 +810,9 @@
           📱 録音方法ガイド
         </a>
 
-        <a href="https://x.com/ryuzanmix" class="contact-button primary" target="_blank" rel="noopener">
-          <i class="fab fa-twitter"></i>
-          XのDMで相談する（@ryuzanmix）
-        </a>
-
         <a href="mailto:ryuzan.mix@gmail.com?subject=MIX依頼のご相談&body=こんにちは、竜山つむぎさんへMIXの件でご連絡です。" class="contact-button">
           <i class="fas fa-envelope"></i>
           メールで相談する
-        </a>
-
-        <a href="https://forms.gle/kko1grBVSAXcypLF8" class="contact-button" target="_blank" rel="noopener">
-          <i class="fas fa-clipboard"></i>
-          フォームで依頼内容を送る
         </a>
 
         <a href="https://coconala.com/services/2323053" class="contact-button" target="_blank" rel="noopener">
@@ -1018,13 +1020,6 @@
         "price": "3000",
         "priceCurrency": "JPY",
         "description": "お試し用1番のみMIX、ハモリ2トラック込み"
-      },
-      {
-        "@type": "Offer",
-        "name": "ガイドボーカル作成",
-        "price": "5000",
-        "priceCurrency": "JPY",
-        "description": "MIDIからガイドボーカル制作"
       }
     ],
     "areaServed": "JP",
