--- a/recording-guide.html
+++ b/recording-guide.html
@@ -19,340 +19,7 @@
   
   <!-- スタイルシート -->
   <link href="styles.css" rel="stylesheet"/>
-
-  <style>
-    /* 録音ガイドページ用の統一されたナビゲーション */
-    .guide-header-nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-      z-index: 1000;
-      padding: 10px 0;
-      border-bottom: 1px solid var(--border);
-      box-shadow: var(--shadow);
-    }
-
-    .guide-header-nav .nav-inner {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 0 20px;
-      flex-wrap: wrap;
-    }
-
-    .guide-header-nav a {
-      font-size: 14px;
-      font-weight: 500;
-      color: var(--text);
-      padding: 8px 16px;
-      border-radius: 20px;
-      transition: all 0.3s ease;
-      text-decoration: none;
-    }
-
-    .guide-header-nav a:hover {
-      background: var(--primary-light);
-      color: var(--primary-dark);
-    }
-
-    .guide-header-nav a.current {
-      background: var(--primary);
-      color: white;
-    }
-
-    /* メインコンテンツのマージン調整 */
-    .guide-main {
-      margin-top: 80px;
-    }
-
-    /* 既存のスタイルはそのまま維持 */
-    .guide-hero {
-      background: var(--gradient);
-      padding: 40px 20px;
-      border-radius: 20px;
-      margin-bottom: 40px;
-      text-align: center;
-      border: 1px solid var(--border);
-    }
-
-    .guide-nav {
-      background: var(--card);
-      border-radius: 16px;
-      padding: 20px;
-      margin-bottom: 30px;
-      box-shadow: var(--shadow);
-    }
-
-    .guide-nav h3 {
-      color: var(--primary-dark);
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    .nav-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-    }
-
-    .nav-item {
-      background: var(--bg-secondary);
-      padding: 15px;
-      border-radius: 12px;
-      text-align: center;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      border: 2px solid transparent;
-    }
-
-    .nav-item:hover {
-      background: var(--primary-light);
-      border-color: var(--primary);
-    }
-
-    .nav-item i {
-      font-size: 2rem;
-      color: var(--primary);
-      margin-bottom: 8px;
-    }
-
-    .platform-section {
-      background: var(--card);
-      border-radius: 20px;
-      padding: 30px;
-      margin-bottom: 30px;
-      box-shadow: var(--shadow);
-    }
-
-    .platform-header {
-      display: flex;
-      align-items: center;
-      gap: 15px;
-      margin-bottom: 25px;
-      padding-bottom: 15px;
-      border-bottom: 2px solid var(--border);
-    }
-
-    .platform-icon {
-      font-size: 2.5rem;
-      color: var(--primary);
-    }
-
-    .platform-title {
-      font-size: 1.8rem;
-      color: var(--primary-dark);
-      margin: 0;
-    }
-
-    .usage-rate {
-      background: var(--success);
-      color: white;
-      padding: 4px 12px;
-      border-radius: 20px;
-      font-size: 0.8rem;
-      font-weight: 600;
-    }
-
-    .app-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      margin-bottom: 30px;
-    }
-
-    .app-card {
-      background: var(--bg-secondary);
-      border-radius: 16px;
-      padding: 20px;
-      border-left: 4px solid var(--primary);
-    }
-
-    .app-header {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      margin-bottom: 15px;
-    }
-
-    .app-icon {
-      width: 40px;
-      height: 40px;
-      border-radius: 8px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.2rem;
-      color: white;
-    }
-
-    .app-name {
-      font-size: 1.2rem;
-      font-weight: 600;
-      color: var(--text);
-      margin: 0;
-    }
-
-    .app-rating {
-      background: var(--primary);
-      color: white;
-      padding: 2px 8px;
-      border-radius: 12px;
-      font-size: 0.7rem;
-      margin-left: auto;
-    }
-
-    .step-list {
-      list-style: none;
-      padding: 0;
-    }
-
-    .step-list li {
-      background: white;
-      margin: 8px 0;
-      padding: 12px 16px;
-      border-radius: 8px;
-      border-left: 3px solid var(--primary);
-      position: relative;
-      padding-left: 40px;
-    }
-
-    .step-list li::before {
-      content: counter(step-counter);
-      counter-increment: step-counter;
-      position: absolute;
-      left: 12px;
-      top: 12px;
-      background: var(--primary);
-      color: white;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 0.8rem;
-      font-weight: 600;
-    }
-
-    .step-list {
-      counter-reset: step-counter;
-    }
-
-    .warning-box {
-      background: #fff3cd;
-      border: 2px solid var(--warning);
-      border-radius: 12px;
-      padding: 20px;
-      margin: 20px 0;
-    }
-
-    .warning-title {
-      color: var(--warning);
-      font-weight: 600;
-      margin-bottom: 10px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .tips-box {
-      background: #d1ecf1;
-      border: 2px solid #17a2b8;
-      border-radius: 12px;
-      padding: 20px;
-      margin: 20px 0;
-    }
-
-    .tips-title {
-      color: #17a2b8;
-      font-weight: 600;
-      margin-bottom: 10px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .file-naming {
-      background: var(--card);
-      border-radius: 16px;
-      padding: 25px;
-      margin: 30px 0;
-      box-shadow: var(--shadow);
-    }
-
-    .naming-examples {
-      display: grid;
-      gap: 15px;
-      margin-top: 20px;
-    }
-
-    .naming-example {
-      background: var(--bg-secondary);
-      padding: 15px;
-      border-radius: 8px;
-      font-family: monospace;
-      border-left: 3px solid var(--success);
-    }
-
-    .do-dont {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-      margin: 20px 0;
-    }
-
-    .do-card, .dont-card {
-      padding: 20px;
-      border-radius: 12px;
-    }
-
-    .do-card {
-      background: #d4edda;
-      border: 2px solid var(--success);
-    }
-
-    .dont-card {
-      background: #f8d7da;
-      border: 2px solid var(--error);
-    }
-
-    .do-title, .dont-title {
-      font-weight: 600;
-      margin-bottom: 15px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-
-    .do-title {
-      color: var(--success);
-    }
-
-    .dont-title {
-      color: var(--error);
-    }
-
-    @media (max-width: 768px) {
-      .do-dont {
-        grid-template-columns: 1fr;
-      }
-      
-      .app-grid {
-        grid-template-columns: 1fr;
-      }
-      
-      .platform-header {
-        flex-direction: column;
-        text-align: center;
-        gap: 10px;
-      }
-    }
-  </style>
+  <link href="recording-guide.css" rel="stylesheet"/>
 </head>
 
 <body>
